[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
axum = "0.7.4"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
